--- a/account/templates/account/general.html
+++ b/account/templates/account/general.html
@@ -1,23 +1,119 @@
-{% autoescape off %}
-<h3>
-    Hi {{user}},
-</h3>
+<html>
+ <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+<body style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #f5f8fa; color: #74787E; height: 100%; hyphens: auto; line-height: 1.4; margin: 0; -moz-hyphens: auto; -ms-word-break: break-all; width: 100% !important; -webkit-hyphens: auto; -webkit-text-size-adjust: none; word-break: break-word;">
+    <style>
+        p{
+            font-family: Avenir, Helvetica, sans-serif;
+             box-sizing: border-box;
+             color: #74787E;
+             font-size: 16px;
+             line-height: 1.5em;
+             margin-top: 0;
+             text-align: left;
+        }
+        .footer p{
+                    font-family: Avenir, Helvetica, sans-serif;
+                    box-sizing: border-box;
+                    line-height: 1.5em;
+                    margin-top: 0;
+                    color: #AEAEAE;
+                    font-size: 12px;
+                    text-align: center;
+        }
+        .btn{
+            style="font-family: Avenir, Helvetica, sans-serif;
+            box-sizing: border-box;
+            color: #000000;
+            border: 2px solid #808080b3;
+            padding: 3px 10px;
+            text-decoration: none;
+            border-radius: 3px;
+            background-color: #74787e3d;
+        }
+        .header a{
+            style="font-family: Avenir, Helvetica, sans-serif;
+            box-sizing: border-box;
+            color: #000000;
+            font-family: Avenir, Helvetica, sans-serif;
+            box-sizing: border-box;
+            color: #bbbfc3;
+            font-size: 19px;
+            font-weight: bold;
+            text-decoration: none;
+            text-shadow: 0 1px 0 white;
+        }
+        @media  only screen and (max-width: 600px) {
+            .inner-body {
+                width: 100% !important;
+            }
 
-To initiate the password reset process for your account on {{ email }},
-click the link below:
-<br><br>
-<td class="content-cell" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
-    <p><strong>Hello!</strong></p>
-    <p>You are receiving this email because we received a password reset request for your account.</p>
-    <p>
-        <a target="_blank" href="{{reset_link}}" class="btn">Reset Password</a>
-    </p>
-    <p>
-        If you did not request a password reset, no further action is required.
-    </p>
-</td>
-<br><br>
-If clicking the link above doesn't work, please copy and paste the URL in a new browser
-window instead.
+            .footer {
+                width: 100% !important;
+            }
+        }
 
-{% endautoescape %}
+        @media  only screen and (max-width: 500px) {
+            .button {
+                width: 100% !important;
+            }
+        }
+    </style>
+
+    <table class="wrapper" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #f5f8fa; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+        <tr>
+            <td align="center" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box;">
+                <table class="content" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+                    <tr>
+                         <td class="header" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 25px 0; text-align: center;">
+                            <a href="https://airbook.aero">
+                                Airbook
+                            </a>
+                         </td>
+                    </tr>
+
+                    <!-- Email Body -->
+                    <tr>
+                        <td class="body" width="100%" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #FFFFFF; border-bottom: 1px solid #EDEFF2; border-top: 1px solid #EDEFF2; margin: 0; padding: 0; width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 100%;">
+                            <table class="inner-body" align="center" width="570" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; background-color: #FFFFFF; margin: 0 auto; padding: 0; width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 570px;">
+                                <!-- Body content -->
+                                <tr>
+                                    <td class="content-cell" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
+                                        <p><strong>Hello!</strong></p>
+                                        <p>You are receiving this email because we received a password reset request for your account.</p>
+                                        <p>
+                                            <a target="_blank" href="{{reset_link}}" class="btn">Reset Password</a>
+                                        </p>
+                                        <p>
+                                            If you did not request a password reset, no further action is required.
+                                        </p>
+                                        <p>
+                                            Thank you,<br>
+                                            The Knight Team <br>
+
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box;">
+                            <table class="footer" align="center" width="570" cellpadding="0" cellspacing="0" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; margin: 0 auto; padding: 0; text-align: center; width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; -premailer-width: 570px;">
+                                <tr>
+                                    <td class="content-cell" align="center" style="font-family: Avenir, Helvetica, sans-serif; box-sizing: border-box; padding: 35px;">
+                                        <p>© 2020 Airbook. All rights reserved.</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
