added edit event form

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -105,6 +105,11 @@
   text-align: center;
 }
 
+.percent-icon{
+  position: relative;
+  bottom: -32px;
+}
+
 // .nav-link:focus {  
 //     outline: none;  
 // }
